--- a/prince/Makefile.in
+++ b/prince/Makefile.in
@@ -13,6 +13,7 @@ DIRS		= base samples res plugins helpfiles bin sidebar shells TeX dictionaries u
 
 PREF_JS_EXPORTS	= $(srcdir)/prince-prefs.js
 DIST_FILES	= application.ini
+MACRO_FILES = $(wildcard	$(srcdir)/TCITeX/TeX/LaTeX/*)
 
 ifneq (,$(filter windows,$(MOZ_WIDGET_TOOLKIT)))
 ICONS		= icons/SWP.ico icons/SW.ico icons/SNB.ico
@@ -29,4 +30,5 @@ include $(topsrcdir)/config/rules.mk
 ifneq (,$(ICONS))
 libs:: $(ICONS)
 	$(INSTALL) $^ $(FINAL_TARGET)/chrome/icons/default
+	$(INSTALL) -R $(MACRO_FILES) $(FINAL_TARGET)/TCItex/tex/latex
 endif
