--- a/gfx/thebes/src/Makefile.in
+++ b/gfx/thebes/src/Makefile.in
@@ -56,7 +56,9 @@ CPPSRCS	+= 	gfxWindowsFonts.cpp \
 		gfxWindowsNativeDrawing.cpp \
 		nsUnicodeRange.cpp \
 		$(NULL)
-CPPSRCS +=	gfxPDFSurface.cpp
+CPPSRCS +=	gfxPDFSurface.cpp \
+		gfxSVGSurface.cpp
+		$(NULL)
 
 _OS_LIBS	= usp10 msimg32
 ifdef GNU_CXX
@@ -74,24 +76,31 @@ CPPSRCS	+=	gfxOS2Fonts.cpp \
 		nsUnicodeRange.cpp \
 		gfxFontconfigUtils.cpp \
 		$(NULL)
-CPPSRCS +=	gfxPDFSurface.cpp
+
+CPPSRCS +=	gfxPDFSurface.cpp \
+		gfxSVGSurface.cpp
+		$(NULL)
 EXTRA_DSO_LDOPTS += $(MOZ_CAIRO_LIBS)
 REQUIRES += uconv
 endif
 
 ifeq ($(MOZ_WIDGET_TOOLKIT),gtk2)
 CPPSRCS +=      gfxXlibSurface.cpp gfxPlatformGtk.cpp gfxXlibNativeRenderer.cpp
-CPPSRCS +=	gfxPangoFonts.cpp 
+CPPSRCS +=	gfxPangoFonts.cpp
 CPPSRCS +=	gfxPDFSurface.cpp gfxPSSurface.cpp
+CPPSRCS +=  gfxSVGSurface.cpp
 CPPSRCS +=	gfxFontconfigUtils.cpp
 CPPSRCS +=	nsUnicodeRange.cpp
+CPPSRCS +=	gfxPDFSurface.cpp \
+		gfxSVGSurface.cpp
+		$(NULL)
 CSRCS = cairo-xlib-utils.c
 EXTRA_DSO_LDOPTS += $(MOZ_PANGO_LIBS) $(ZLIB_LIBS) $(MOZ_XFT_LIBS) $(XLDFLAGS) $(XLIBS)
 endif
 
 ifeq ($(MOZ_WIDGET_TOOLKIT),beos)
 CPPSRCS	+= 	gfxBeOSSurface.cpp gfxBeOSPlatform.cpp
-CPPSRCS +=	gfxPangoFonts.cpp 
+CPPSRCS +=	gfxPangoFonts.cpp
 #CPPSRCS +=	gfxPDFSurface.cpp
 CPPSRCS +=	gfxFontconfigUtils.cpp
 CPPSRCS +=	nsUnicodeRange.cpp
@@ -102,13 +111,17 @@ ifeq ($(MOZ_WIDGET_TOOLKIT),cocoa)
 CPPSRCS	+= \
 	gfxQuartzSurface.cpp \
 	gfxQuartzImageSurface.cpp \
-	gfxQuartzPDFSurface.cpp \
 	gfxPlatformMac.cpp \
 	gfxAtsuiFonts.cpp \
 	$(NULL)
-#CPPSRCS +=	gfxPDFSurface.cpp
+
+CPPSRCS +=	gfxPDFSurface.cpp \
+	gfxSVGSurface.cpp \
+	$(NULL)
+
 CPPSRCS +=      nsUnicodeRange.cpp
 CPPSRCS +=      gfxQuartzNativeDrawing.cpp
+# gfxQuartzPDFSurface.cpp \
 
 CMMSRCS = gfxQuartzFontCache.mm
 
@@ -125,7 +138,7 @@ SHARED_LIBRARY_LIBS += $(DIST)/lib/$(LIB_PREFIX)mozglitz.$(LIB_SUFFIX)
 ifeq ($(MOZ_WIDGET_TOOLKIT),windows)
 REQUIRES +=	glitzwgl
 SHARED_LIBRARY_LIBS += $(DIST)/lib/$(LIB_PREFIX)mozglitzwgl.$(LIB_SUFFIX)
-OS_LIBS += opengl32.lib 
+OS_LIBS += opengl32.lib
 endif
 
 ifeq ($(MOZ_WIDGET_TOOLKIT),gtk2)
