Working on selection; these files are in a pretty stable state.

--- a/.hgignore
+++ b/.hgignore
@@ -25,6 +25,7 @@ glob:extensions/firebug/*
 glob:extensions/chromebug/*
 glob:*.sublime-project
 glob:*.sublime-workspace
+glob:*/docs/*
 .tm_properties
 .tmhotkeys
 mozilla\.mchg
