Commented out constant fragments to get a Windows build

--- a/prince/res/Makefile.in
+++ b/prince/res/Makefile.in
@@ -24,8 +24,8 @@ libs::	$(CSS_RESOURCES) $(XBL_RESOURCES) $(CM2_RESOURCES)
 	$(INSTALL)	$(TAGDEF_RESOURCES)	$(FINAL_TARGET)/res/tagdefs
 	$(INSTALL)	$(XML_RESOURCES)	$(FINAL_TARGET)/res/xml
 	$(INSTALL)	$(FRAG_RESOURCES)	$(FINAL_TARGET)/res/fragments
-	$(INSTALL)	$(CONSTANTS1_RESOURCES)	$(FINAL_TARGET)/res/fragments/Constants
-	$(INSTALL)	$(CONSTANTS2_RESOURCES)	$(FINAL_TARGET)/res/fragments/Constants
+#	$(INSTALL)	$(CONSTANTS1_RESOURCES)	$(FINAL_TARGET)/res/fragments/Constants
+#	$(INSTALL)	$(CONSTANTS2_RESOURCES)	$(FINAL_TARGET)/res/fragments/Constants
 	$(INSTALL)	$(DINGBAT_RESOURCES)	$(FINAL_TARGET)/res/fragments/dingbats
 	$(INSTALL)  $(CM2_RESOURCES) 	$(FINAL_TARGET)/res/cm2
 	$(INSTALL)	$(ICON_RESOURCES)	$(FINAL_TARGET)/res/css
