A number of plot fixes - many things fixed, though there are still bugs. In particular, the revise dialog now works for the most part, including tube and approximate integral plots. The Variables and Animation subdialog is buggy, though it now works somewhat. Also managed to keep the VCam object alive after revising in the dialog, though I've seen this fail as well (not sure what else could go on). Finally, a fix to a bug that prevented successfully saving any document, at least if it contained plots.

--- a/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
+++ b/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
@@ -226,6 +226,9 @@ interface msiISimpleComputeEngine : nsISupports
   void plotfuncQuery(in wstring graph, [retval] out wstring result);
   const unsigned long Plotfunc_query						 = CCID_PlotFuncQuery;						
 
+  void getVariables (in wstring expr, [retval] out wstring result);
+  //const unsigned long GetVariables               = CCID_GetVariables;
+
   /**
    * Make a definition
   */
