Work on Stop Button -- still crashes sometimes

--- a/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
+++ b/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
@@ -331,6 +331,11 @@ interface msiISimpleComputeEngine : nsISupports
   */
   void perform(in wstring expr, in unsigned long operation, [retval] out wstring result);
 
+  /** 
+   * Stop a computation
+  */
+  void stopProcessor();
+
   /**
    * Shutdown the engine
   */
