--- a/prince/application.ini
+++ b/prince/application.ini
@@ -1,9 +1,9 @@
 [App]
 Name=SWP
-Version=SWP.6.0.0
-BuildID=20130726
+Version=6.0.0
+BuildID=20130820
 ID=ScientificWorkPlace@mackichan.com
-Copyright=Copyright (c) 2012 MacKichan Software, Inc.
+Copyright=Copyright (c) 2013 MacKichan Software, Inc.
 
 [Gecko]
 MinVersion=SWP.6.0.0
