Prevent the cursor from going out of paragraphs at the beginning of the document.

--- a/.hgignore
+++ b/.hgignore
@@ -26,16 +26,12 @@ glob:extensions/chromebug/*
 glob:*.sublime-project
 glob:*.sublime-workspace
 glob:*/docs/*
-glob:mozilla/toolkit/crashreporter/google-breakpad/src/tools/mac/dump_syms/*
-glob:mozilla/toolkit/crashreporter/google-breakpad/src/tools/mac/symupload/*
-glob:mozilla/toolkit/crashreporter/google-breakpad/src/tools/mac/crash_report/*
-glob:*/dump_syms/*
-glob:*.xcodeproj
-glob:*.pbxproj
-glob:*.save
-glob:*.build
+glob:.tm_properties
+glob:.tmhotkeys
+glob:mozilla\.mchg
+glob:myports\.txt
+glob:*.xcscheme
+glob:*/xcschememanagement.plist
 glob:*.hmap
-.tm_properties
-.tmhotkeys
-mozilla\.mchg
-myports\.txt
+
+
