--- a/prince/shells/Articles/Makefile.in
+++ b/prince/shells/Articles/Makefile.in
@@ -14,8 +14,8 @@ SHELL_RESOURCES := $(wildcard  $(srcdir)/*.sci) \
 
 libs:: $(SHELL_RESOURCES)	
 #	-mkdir $(FINAL_TARGET)/shells
-	-mkdir -p $(FINAL_TARGET)/shells/articles
-	$(INSTALL) $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/articles
+	-mkdir -p $(FINAL_TARGET)/shells/Articles
+	$(INSTALL) $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Articles
 
 
 
