--- a/prince/shells/Books/Makefile.in
+++ b/prince/shells/Books/Makefile.in
@@ -8,13 +8,13 @@ VPATH		= @srcdir@
 include $(DEPTH)/config/autoconf.mk
 include $(topsrcdir)/config/rules.mk
 
-SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci  $(srcdir)/*.xhtml) \
+SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci \
 	$(NULL)
 
 
 libs::	$(SHELL_RESOURCES)
-	-mkdir $(FINAL_TARGET)/shells/books
-	cp	$(SHELL_RESOURCES)	$(FINAL_TARGET)/shells/books
+	-mkdir $(FINAL_TARGET)/shells/Books
+	$(INSTALL) $(SHELL_RESOURCES)	$(FINAL_TARGET)/shells/Books
 
 
 
