--- a/prince/shells/Makefile.in
+++ b/prince/shells/Makefile.in
@@ -11,12 +11,12 @@ DIRS		= Articles Books Theses Other Presentations
 include $(DEPTH)/config/autoconf.mk
 include $(topsrcdir)/config/rules.mk
 
-SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci  $(srcdir)/*.xhtml) \
+SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci \
 	$(NULL)
 
 libs::	$(SHELL_RESOURCES)
 	-mkdir $(FINAL_TARGET)/shells
-	cp	$(SHELL_RESOURCES)	$(FINAL_TARGET)/shells
+	$(INSTALL) $(SHELL_RESOURCES)	$(FINAL_TARGET)/shells
 
 
 
