--- a/prince/shells/Theses/Makefile.in
+++ b/prince/shells/Theses/Makefile.in
@@ -8,7 +8,7 @@ VPATH		= @srcdir@
 include $(DEPTH)/config/autoconf.mk
 include $(topsrcdir)/config/rules.mk
 
-SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci \
+SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci) \
 	$(NULL)
 
 
