--- a/prince/shells/Articles/Makefile.in
+++ b/prince/shells/Articles/Makefile.in
@@ -13,9 +13,9 @@ SHELL_RESOURCES := $(wildcard  $(srcdir)/*.sci) \
 
 
 libs:: $(SHELL_RESOURCES)	
-#	-mkdir $(FINAL_TARGET)/shells
-	-mkdir -p $(FINAL_TARGET)/shells/Articles
-	$(INSTALL) $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Articles
+#	- mkdir $(FINAL_TARGET)/shells
+	- kdir -p $(FINAL_TARGET)/shells/Articles
+	- cp $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Articles
 
 
 
