--- a/prince/shells/Books/Makefile.in
+++ b/prince/shells/Books/Makefile.in
@@ -12,9 +12,10 @@ SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci) \
 	$(NULL)
 
 
-libs::	$(SHELL_RESOURCES)
-	-mkdir $(FINAL_TARGET)/shells/Books
-	$(INSTALL) $(SHELL_RESOURCES)	$(FINAL_TARGET)/shells/Books
+libs:: $(SHELL_RESOURCES)	
+#	- mkdir $(FINAL_TARGET)/shells
+	- kdir -p $(FINAL_TARGET)/shells/Books
+	- cp $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Books
 
 
 
