--- a/prince/shells/Other/Makefile.in
+++ b/prince/shells/Other/Makefile.in
@@ -13,9 +13,9 @@ SHELL_RESOURCES := $(wildcard  $(srcdir)/*.sci) \
 
 
 libs:: $(SHELL_RESOURCES)	
-#	-mkdir $(FINAL_TARGET)/shells
-	-mkdir -p $(FINAL_TARGET)/shells/Other
-	$(INSTALL) $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Other
+#	- mkdir $(FINAL_TARGET)/shells
+	- mkdir -p $(FINAL_TARGET)/shells/Other
+	- cp $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Other
 
 
 
