--- a/prince/shells/Theses/Makefile.in
+++ b/prince/shells/Theses/Makefile.in
@@ -13,8 +13,8 @@ SHELL_RESOURCES := $(wildcard	$(srcdir)/*.sci) \
 
 
 libs::	$(SHELL_RESOURCES)
-	-mkdir $(FINAL_TARGET)/shells/Theses
-	$(INSTALL) $(SHELL_RESOURCES)	$(FINAL_TARGET)/shells/Theses
+	- mkdir -p $(FINAL_TARGET)/shells/Theses
+	- cp $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Theses
 
 
 
