--- a/prince/shells/Articles/Makefile.in
+++ b/prince/shells/Articles/Makefile.in
@@ -14,7 +14,7 @@ SHELL_RESOURCES := $(wildcard  $(srcdir)/*.sci) \
 
 libs:: $(SHELL_RESOURCES)	
 #	- mkdir $(FINAL_TARGET)/shells
-	- kdir -p $(FINAL_TARGET)/shells/Articles
+	- mkdir -p $(FINAL_TARGET)/shells/Articles
 	- cp $(SHELL_RESOURCES) $(FINAL_TARGET)/shells/Articles
 
 
