Once again I downloaded an Apple update and the compilation  of pretex got squirrely. These changes to the CXXFLAGS seem to have fixed the problem.

--- a/filters/ptprince/Makefile.in
+++ b/filters/ptprince/Makefile.in
@@ -122,8 +122,7 @@ $(CPPSRCS):$(FWSRCS)
 
 # why doesn't this work?
 LOCAL_INCLUDES	= -I$(srcdir)
-#CXXFLAGS	+= -GX -GR -DMOZILLA_VERSION=\"$(MOZILLA_VERSION)\"
-CXXFLAGS =
+CXXFLAGS	+= -fexceptions -frtti -std=gnu++98 -GX -GR -DMOZILLA_VERSION=\"$(MOZILLA_VERSION)\"
 ifdef MOZ_DEBUG
 CXXFLAGS	+= $(DBGFLAGS)
 endif
