Added -fexceptions -frtti to the Linux build but not -GX -GR which do not work with Linux.

--- a/filters/ptprince/Makefile.in
+++ b/filters/ptprince/Makefile.in
@@ -122,7 +122,12 @@ $(CPPSRCS):$(FWSRCS)
 
 # why doesn't this work?
 LOCAL_INCLUDES	= -I$(srcdir)
+ifeq ($(OS_ARCH),Linux)
+CXXFLAGS	+= -fexceptions -frtti
+endif
+ifeq ($(OS_ARCH),Darwin)
 CXXFLAGS	+= -fexceptions -frtti -std=gnu++98 -GX -GR -DMOZILLA_VERSION=\"$(MOZILLA_VERSION)\"
+endif
 ifdef MOZ_DEBUG
 CXXFLAGS	+= $(DBGFLAGS)
 endif
