--- a/filters/ptprince/Makefile.in
+++ b/filters/ptprince/Makefile.in
@@ -122,6 +122,9 @@ $(CPPSRCS):$(FWSRCS)
 
 # why doesn't this work?
 LOCAL_INCLUDES	= -I$(srcdir)
+ifeq ($(OS_ARCH),WINNT)
+CXXFLAGS        += -fexceptions -frtti -std=gnu++98 -GX -GR -DMOZILLA_VERSION=\"$(MOZILLA_VERSION)\"
+endif
 ifeq ($(OS_ARCH),Linux)
 CXXFLAGS	+= -fexceptions -frtti
 endif
