We now apply JiggleCursor after the cursor is placed by the mouse. It should be much harder (even impossible, maybe) to put the cursor directly in the <body>.

--- a/layout/generic/Makefile.in
+++ b/layout/generic/Makefile.in
@@ -57,7 +57,9 @@ REQUIRES	= xpcom \
 		  gfx \
 		  widget \
 		  locale \
-      editor \
+          editor \
+		  txmgr \
+		  txtsvc \
 		  view \
 		  necko \
 		  js \
