--- a/prince/shells/Makefile.in
+++ b/prince/shells/Makefile.in
@@ -5,7 +5,7 @@ srcdir		= @srcdir@
 VPATH		= @srcdir@
 
 
-DIRS		= Articles Books Theses Other Presentations
+DIRS		= -Standard_LaTeX Articles Books Theses Other Presentations
 
 
 include $(DEPTH)/config/autoconf.mk
