Changes to handle graphics formats that can't be handled directly by Prince or by pdf- and XeTeX. Some cleanup is still needed, but I want to get this saved so I can bring the changes over to Windows.

--- a/layout/mathml/base/src/mathfont.properties
+++ b/layout/mathml/base/src/mathfont.properties
@@ -45,7 +45,7 @@
 # end of this file for details on the setup of the property file associated to
 # each font.  Do not include the Unicode table in this list.
 
-font.mathfont-glyph-tables = MathJax_Main, Asana Math, XITS math, Symbol
+font.mathfont-glyph-tables = MathJax_Main, XITS math, Symbol
 
 
 # The ordered list of fonts with which to attempt to stretch MathML
