We now pay attention to image size settings when converting pdf, eps, etc. to pngs.

--- a/prince/graphicsConversions.ini
+++ b/prince/graphicsConversions.ini
@@ -47,9 +47,9 @@ tiff=convert "$1.tiff" "gcache/$2.png"
 bmp=sam2p "$1.bmp" "gcache/$2.png"
 emf=wmf2epsc "$1.emf" "tcache/$2.eps; sam2p tcache/$2.eps gcache/$2.png"
 wmf=wmf2epsc "$1.wmf" "tcache/$2.eps; sam2p tcache/$2.eps gcache/$2.png"
-pdf=sam2p "$1.pdf" "gcache/$2.png"
-eps=sam2p "$1.eps" "gcache/$2.png"
-ps=sam2p "$1.ps" "gcache/$2.png"
+pdf=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.pdf"
+eps=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.eps"
+ps=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.ps"
 
 [ConvertersTeX]
 ; TeX will pick up graphics from gcache if there is nothing in tcache
