--- a/prince/graphicsConversions.ini
+++ b/prince/graphicsConversions.ini
@@ -1,18 +1,18 @@
+; WINDOWS VERSION
 ; This file lists the graphics file extensions that are understood by Scientific WorkPlace,
 ; Scientific Word, and Scientific Notebook.
 ;
 ; Graphics formats that are not understood by the underlying Mozilla base or implemented by
 ; a plugin must first be converted to a form that can be displayed.
 ;
-; The [ConvertersBrowser] section gives, for each extension, the command string that does the conversion.
-; The [ConvertersTeX] section gives the command string that converts to a file acceptable to pdfTeX and
-; XeTeX. We count SVG as an acceptable format because with the right packages, it works with pdfTeX and
+; The [Converters] section gives, for each extension, the command string that does the conversion.
+; We count SVG and EPS as acceptable formats because with the right packages, they work with pdfTeX and
 ; XeTeX.
 ;
 ; Users that want to experiment with adding support for new graphics formats can add additional lines to
-; these sections. We assume that all conversion programs, including convert and uniconvertor, are in the 
-; utilities/bin subdirectory (location varies slightly with the platform).
-;
+; these sections. We assume that all conversion programs, including convert and sam2p, are in the 
+; utilities/bin subdirectory (location varies slightly with the platform). 
+
 ; $1 stands for the base name of the original file (the full path without the extension).
 ; $2 stands for the leaf name (without the extension) of the original file.
 ; $3 stands for the desired width of the converted image.
@@ -36,23 +36,21 @@ List=mp4 avi mov
 
 ; extensions with no text following the '=' are directly viewable in the program, and do not need to be
 ; converted. The '<extension>=' part is needed, though, to show that the extension is acceptable.
-[ConvertersBrowser]
+; We use commas instead of spaces to separate parameters, because otherwise spaces in paths can cause a problem.
+
+[Converters]
 jpg=
 jpeg=
 png=
 gif=
 svg=
-tif=convert "$1.tif" "gcache/$2.png"
-tiff=convert "$1.tiff" "gcache/$2.png"
-bmp=sam2p "$1.bmp" "gcache/$2.png"
-emf=wmf2epsc "$1.emf" "tcache/$2.eps; sam2p tcache/$2.eps gcache/$2.png"
-wmf=wmf2epsc "$1.wmf" "tcache/$2.eps; sam2p tcache/$2.eps gcache/$2.png"
-pdf=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.pdf"
-eps=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.eps"
-ps=/usr/local/bin/gs -sDEVICE=png48 -o "gcache/$2.png" "$1.ps"
+tif=convert,$1.tif,gcache/$2.png
+tiff=convert,$1.tiff,gcache/$2.png
+bmp=sam2p,$1.bmp,gcache/$2.png
+emf=wmf2epsc,graphics\$2.emf;sam2p,graphics\$2.eps,gcache\$2.png 
+wmf=wmf2epsc,graphics\$2.wmf;sam2p,graphics\$2.eps,gcache\$2.png
+pdf=sam2p,$1.pdf,gcache\$2.png
+eps=sam2p,$1.eps,gcache\$2.png
+ps=sam2p,$1.ps,gcache\$2.png
+gif=convert,$1.gif,tcache\$2.png
 
-[ConvertersTeX]
-; TeX will pick up graphics from gcache if there is nothing in tcache
-; so we include here only those items where the browser-compatible graphics
-; is not acceptable to TeX.
-gif=convert "$1.gif" "tcache/$2.png"
