Seems to be working on the Mac. It also seems to work on Windows to convert wmf and emf to eps. The second conversion to png (for screen display) seems to work provided gswin32c is on the path. I don't know exactly what has to be done to make that work.

--- a/prince/conversions/linux/graphicsConversions.ini
+++ b/prince/conversions/linux/graphicsConversions.ini
@@ -1,4 +1,4 @@
-; WINDOWS VERSION
+; MAC OS X VERSION
 ; This file lists the graphics file extensions that are understood by Scientific WorkPlace,
 ; Scientific Word, and Scientific Notebook.
 ;
@@ -47,10 +47,8 @@ svg=
 tif=convert,$1.tif,gcache/$2.png
 tiff=convert,$1.tiff,gcache/$2.png
 bmp=sam2p,$1.bmp,gcache/$2.png
-emf=wmf2epsc,graphics\$2.emf;sam2p,graphics\$2.eps,gcache\$2.png 
-wmf=wmf2epsc,graphics\$2.wmf;sam2p,graphics\$2.eps,gcache\$2.png
-pdf=sam2p,$1.pdf,gcache\$2.png
-eps=sam2p,$1.eps,gcache\$2.png
-ps=sam2p,$1.ps,gcache\$2.png
-gif=convert,$1.gif,tcache\$2.png
+pdf=sam2p,$1.pdf,gcache/$2.png
+eps=sam2p,$1.eps,gcache/$2.png
+ps=sam2p,$1.ps,gcache/$2.png
+gif=convert,$1.gif,tcache/$2.png
 
