--- a/prince/Makefile.in
+++ b/prince/Makefile.in
@@ -8,11 +8,11 @@ VPATH		= @srcdir@
 include $(DEPTH)/config/autoconf.mk
 
 DIRS		= base samples res plugins helpfiles bin sidebar shells TeX dictionaries user  \
-	fastcursor modules Wrappers utilities \
+	fastcursor modules Wrappers utilities conversions \
 	$(NULL)
 
 PREF_JS_EXPORTS	= $(srcdir)/prince-prefs.js
-DIST_FILES	= application.ini graphicsConversions.ini
+DIST_FILES	= application.ini
 
 ifneq (,$(filter windows,$(MOZ_WIDGET_TOOLKIT)))
 ICONS		= icons/SWP.ico icons/SW.ico icons/SNB.ico
