--- a/prince/plugins/Makefile.in
+++ b/prince/plugins/Makefile.in
@@ -3,8 +3,11 @@ topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
 VPATH		= @srcdir@
 
+XPIDL_MODULE = MuPADGraphicsPlugin
 
-
+XPIDLSRCS	= \
+	    scripting.idl \
+		$(NULL)
 
 include $(DEPTH)/config/autoconf.mk
 include $(topsrcdir)/config/rules.mk
