Fixed failure to load graphics if the extension wasn't lower case.

--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -32,7 +32,7 @@ List=png gif tif tiff bmp
 List=emf wmf svg pdf eps ps
 
 [Video]
-List=mp4 avi mov
+List=mp4 avi mov wmv
 
 ; extensions with no text following the '=' are directly viewable in the program, and do not need to be
 ; converted. The '<extension>=' part is needed, though, to show that the extension is acceptable.
@@ -52,4 +52,8 @@ pdf=sam2p,$1.pdf,gcache\$2.png
 eps=sam2p,$1.eps,gcache\$2.png
 ps=sam2p,$1.ps,gcache\$2.png
 gif=convert,$1.gif,tcache\$2.png
+mp4=
+avi=
+mov=
+wmv=
 
