--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -47,7 +47,7 @@ tif=convert,$1.tif,gcache\$2.png
 tiff=convert,$1.tiff,gcache\$2.png
 bmp=sam2p,$1.bmp,gcache\$2.png
 emf=wmf2epsc,graphics\$2.emf;sam2p,graphics\$2.eps,gcache\$2.png 
-wmf=wmf2epsc,graphics\$2.wmf;sam2p,graphics\$2.eps,gcache\$2.png
+wmf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;sam2p,graphics\$2.eps,gcache\$2.png
 pdf=sam2p,$1.pdf,gcache\$2.png
 eps=sam2p,$1.eps,gcache\$2.png
 ps=sam2p,$1.ps,gcache\$2.png
