Complete implementation of tracking of doc id and name mangling

--- a/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
+++ b/toolkit/components/Compute/public/msiISimpleComputeEngine.idl.in
@@ -326,6 +326,9 @@ interface msiISimpleComputeEngine : nsISupports
   */
   long getUserPref(in unsigned long attrID);
 
+  void getEditorID([retval] PRUint32 id);  
+  void setEditorID(in PRUint32 id);  
+
   /**
    * Perform the operation on the input.  Pass in command ID.
   */
