On the Mac, added more to the info.plist. Without these changes, SWP was not showing up int the running apps list of Launchbar and Keyboard Maestro.

--- a/prince/application.ini
+++ b/prince/application.ini
@@ -1,9 +1,10 @@
 [App]
-Name=SWP
+Name=SW
 Version=6.0.0
-BuildID=20141015
-ID=ScientificWorkPlace@mackichan.com
-Copyright=Copyright (c) 2014 MacKichan Software, Inc.
+ID=ScientificWord@mackichan.com
+longname=ScientificWord
+Copyright=Copyright (c) 2012 MacKichan Software, Inc.
+BuildID=1000
 
 [Gecko]
 MinVersion=SWP.6.0.0
