RLM stuff in an unbaked form

--- a/editor/idl/Makefile.in
+++ b/editor/idl/Makefile.in
@@ -79,7 +79,8 @@ XPIDLSRCS	= \
         msiIBigOpInfo.idl \
         msiIMouse.idl \
         msiIEditActionListenerExtension.idl \
-		$(NULL)
+        msiIAppUtils.idl \
+   		$(NULL)
 
 include $(topsrcdir)/config/rules.mk		
 
