--- a/editor/libeditor/base/Makefile.in
+++ b/editor/libeditor/base/Makefile.in
@@ -66,7 +66,7 @@ REQUIRES	= xpcom \
 		  widget \
 		  unicharutil \
 		  commandhandler \
-      msiutil \
+      	  msiutil \
 		  docshell \
 		  $(NULL)
 
@@ -83,7 +83,8 @@ CPPSRCS		=                           \
 		nsEditorUtils.cpp           \
 		nsSelectionState.cpp        \
 		msiTagListManager.cpp       \
-    jcsDumpNode.cpp \
+		msiAppUtils.cpp 			\
+    	jcsDumpNode.cpp \
 		$(NULL)
 
 # Transactions: we'd like to split these off,
