--- a/prince/application.ini
+++ b/prince/application.ini
@@ -1,10 +1,10 @@
 [App]
-Name=SW
+Name=SWP
 Version=6.0.0
-ID=ScientificWord@mackichan.com
-longname=ScientificWord
-Copyright=Copyright (c) 2012 MacKichan Software, Inc.
-BuildID=1000
+ID=ScientificWorkPlace@mackichan.com
+longname=ScientificWorkPlace
+BuildID="Barry's build"
+Copyright=Copyright (c) 2015 MacKichan Software, Inc.
 
 [Gecko]
 MinVersion=SWP.6.0.0
