--- a/configure.in
+++ b/configure.in
@@ -2438,7 +2438,9 @@ case "$target" in
         NO_LD_ARCHIVE_FLAGS=
     fi
     ;;
-esac
+*-darwin*)
+    NO_LD_ARCHIVE_FLAGS=
+    ;;esac
 AC_SUBST(NO_LD_ARCHIVE_FLAGS)
 
 dnl
