--- a/toolkit/components/Makefile.in
+++ b/toolkit/components/Makefile.in
@@ -100,6 +100,7 @@ ifdef MOZ_XUL
 DIRS += \
 	autocomplete \
 	autosub \
+	rlm \
 	Compute \
 	keymap \
 	scriptrunner \
@@ -107,8 +108,6 @@ DIRS += \
 	satchel \
   msiutil \
 	$(NULL)
-# rlm \
-
 endif # MOZ_XUL
 
 ifdef MOZ_SUITE
