--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -10,8 +10,8 @@
 ; XeTeX.
 ;
 ; Users that want to experiment with adding support for new graphics formats can add additional lines to
-; these sections. We assume that all conversion programs, including convert and sam2p, are in the 
-; utilities/bin subdirectory (location varies slightly with the platform). 
+; these sections. We assume that all conversion programs, including convert and sam2p, are in the
+; utilities/bin subdirectory (location varies slightly with the platform).
 
 ; $1 stands for the base name of the original file (the full path without the extension).
 ; $2 stands for the leaf name (without the extension) of the original file.
@@ -23,7 +23,7 @@ Version=1.0
 Date=2014-04-18
 
 [LossyBitmaps]
-List=jpg jpeg 
+List=jpg jpeg
 
 [LosslessBitmaps]
 List=png gif tif tiff bmp
@@ -46,10 +46,10 @@ svg=
 tif=convert,$1.tif,gcache\$2.png
 tiff=convert,$1.tiff,gcache\$2.png
 bmp=sam2p,$1.bmp,gcache\$2.png
-emf=wmf2epsc,graphics\$2.emf;sam2p,graphics\$2.eps,gcache\$2.png 
-wmf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;sam2p,graphics\$2.eps,gcache\$2.png
+emf=wmf2epsc,graphics\$2.emf;epstoepf,$2;sam2p,graphics\$2.eps,gcache\$2.png
+wmf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;epstoepf,$2;sam2p,graphics\$2.eps,gcache\$2.png
 pdf=sam2p,$1.pdf,gcache\$2.png
-eps=sam2p,$1.eps,gcache\$2.png
+eps=epstoepf,$2;sam2p,$1.eps,gcache\$2.png
 ps=sam2p,$1.ps,gcache\$2.png
 gif=convert,$1.gif,tcache\$2.png
 mp4=
