Refine the ignored files list in Mercurial

--- a/.hgignore
+++ b/.hgignore
@@ -10,7 +10,7 @@ glob:confdefs.h
 glob:config.cache
 glob:*.err
 glob:*.log
-glob:*/*.orig
+glob:*.orig
 glob:*/Thumbs.db
 glob:.cproject
 glob:.project
