Changes to put preferred document directory in the prefs dialog

--- a/embedding/browser/cocoa/Makefile.in
+++ b/embedding/browser/cocoa/Makefile.in
@@ -59,7 +59,7 @@ export::
 endif
 
 libs::
-	pbxbuild -buildstyle $(BUILDSTYLE) build
+	pbxbuild -configuration $(BUILDSTYLE) build
 
 clean clobber::
 	rm -rf build
