--- a/embedding/tests/cocoaEmbed/Makefile.in
+++ b/embedding/tests/cocoaEmbed/Makefile.in
@@ -52,7 +52,7 @@ export::
 endif
 
 libs::
-	pbxbuild -buildstyle $(BUILDSTYLE) build
+	pbxbuild -configuration $(BUILDSTYLE) build
 
 clean clobber::
 	rm -rf build
