--- a/embedding/components/printingui/src/mac/printpde/Makefile.in
+++ b/embedding/components/printingui/src/mac/printpde/Makefile.in
@@ -75,6 +75,6 @@ endif
 GARBAGE_DIRS += build
 
 libs::
-	$(PBBUILD) $(PROJECT_ARG) -target PrintPDE -configuration $(BUILDSTYLE) $(PBBUILD_ARG)
+	$(PBBUILD) $(PROJECT_ARG) -target PrintPDE -buildstyle $(BUILDSTYLE) $(PBBUILD_ARG)
 	mkdir -p $(DIST)/package
 	$(INSTALL) $(XCODE_PRODUCT_DIR)/PrintPDE.plugin $(DIST)/package
