--- a/prince/res/Makefile.in
+++ b/prince/res/Makefile.in
@@ -16,7 +16,6 @@ FRAG_RESOURCES := $(wildcard $(srcdir)/fragments/*.frg)
 CONSTANTS1_RESOURCES := $(wildcard $(srcdir)/fragments/Constants1/*.frg)
 CONSTANTS2_RESOURCES := $(wildcard $(srcdir)/fragments/Constants2/*.frg)
 CONSTANTS3_RESOURCES := $(wildcard $(srcdir)/fragments/Constants3/*.frg)
-DINGBAT_RESOURCES := $(wildcard $(srcdir)/fragments/dingbats/*.frg)
 CM2_RESOURCES := $(wildcard $(srcdir)/cm2/*)
 
 
@@ -30,7 +29,12 @@ libs::	$(CSS_RESOURCES) $(XBL_RESOURCES) $(CM2_RESOURCES)
 	- cp $(srcdir)/fragments/Constants1/*.frg	$(FINAL_TARGET)/res/fragments/Constants
 	- cp $(srcdir)/fragments/Constants2/*.frg	$(FINAL_TARGET)/res/fragments/Constants
 	- cp $(srcdir)/fragments/Constants3/*.frg	$(FINAL_TARGET)/res/fragments/Constants
-	$(INSTALL)	$(DINGBAT_RESOURCES)	$(FINAL_TARGET)/res/fragments/dingbats
+ifdef MOZ_MSI_TEX
+	- mkdir $(FINAL_TARGET)/res/fragments/Beamer
+	- cp $(srcdir)/fragments/Beamer/*.frg $(FINAL_TARGET)/res/fragments/Beamer
+	- mkdir $(FINAL_TARGET)/res/fragments/dingbats
+	- cp $(srcdir)/fragments/dingbats/*.frg $(FINAL_TARGET)/res/fragments/dingbats
+endif
 	$(INSTALL)  $(CM2_RESOURCES) 	$(FINAL_TARGET)/res/cm2
 	$(INSTALL)	$(ICON_RESOURCES)	$(FINAL_TARGET)/res/css
 				  
