Changes to make the Xcode build to work on our old files.

--- a/embedding/components/printingui/src/mac/printpde/Makefile.in
+++ b/embedding/components/printingui/src/mac/printpde/Makefile.in
@@ -48,6 +48,11 @@ else
 BUILDSTYLE	= Deployment
 endif
 
+# Next two lines added by BBM to get this to compile on Yosemite and beyond
+XCODE_PRODUCT_DIR=build/$(BUILDSTYLE)
+PBBUILD=/Developer/usr/bin/xcodebuild
+
+
 # pbbuild or xcodebuild indicates Xcode; the Xcode project contains
 # native targets needed for proper SDK builds.
 PROJECT=PrintPDE.xcode
