--- a/.hgignore
+++ b/.hgignore
@@ -14,6 +14,7 @@ glob:*.orig
 glob:*/Thumbs.db
 glob:.cproject
 glob:.project
+glob:prince/application.ini
 glob:.settings/org.eclipse.core.runtime.prefs
 glob:.settings/org.eclipse.core.resources.prefs
 glob:extensions/addon-*.*
