--- a/prince/conversions/mac/graphicsConversions.ini
+++ b/prince/conversions/mac/graphicsConversions.ini
@@ -47,7 +47,7 @@ tif=convert,$1.tif,gcache/$2.png
 tiff=convert,$1.tiff,gcache/$2.png
 bmp=sam2p,$1.bmp,gcache/$2.png
 pdf=sam2p,$1.pdf,gcache/$2.png
-eps=epstopdf,$2;sam2p,$1.eps,gcache/$2.png
+eps=epstopdf,$2;sam2p,$1.pdf,gcache/$2.png
 ps=sam2p,$1.ps,gcache/$2.png
 gif=convert,$1.gif,tcache/$2.png
 
