Fixed problem with bibtex not getting run during compilation

--- a/prince/conversions/mac/graphicsConversions.ini
+++ b/prince/conversions/mac/graphicsConversions.ini
@@ -6,7 +6,7 @@
 ; a plugin must first be converted to a form that can be displayed.
 ;
 ; The [Converters] section gives, for each extension, the command string that does the conversion.
-; We count SVG and EPS as acceptable formats because with the right packages, they work with pdfTeX and
+; We count SVG as an acceptable format because with the right packages, it works with pdfTeX and
 ; XeTeX.
 ;
 ; Users that want to experiment with adding support for new graphics formats can add additional lines to
