Remove duplicate declaration

--- a/layout/mathml/base/src/mathfont.properties
+++ b/layout/mathml/base/src/mathfont.properties
@@ -1219,7 +1219,7 @@ operator.\u2223.postfix = lspace:0 rspace:0 stretchy fence symmetric direction:v
 operator.\u2223.prefix = lspace:0 rspace:0 stretchy fence symmetric direction:vertical # &VerticalBar;
 operator.\u2225.postfix = lspace:0 rspace:0 stretchy fence symmetric direction:vertical # &DoubleVerticalBar;
 operator.\u2225.prefix = lspace:0 rspace:0 stretchy fence symmetric direction:vertical # &DoubleVerticalBar;
-operator.\u2283\u20D2.infix = lspace:5 rspace:5 # &NotSuperset;
+# operator.\u2283\u20D2.infix = lspace:5 rspace:5 # &NotSuperset;  // this is a duplicate
 operator.\u228E.prefix = lspace:1 rspace:2 largeop movablelimits symmetric direction:vertical # &UnionPlus;
 operator.\u2295.prefix = lspace:0 rspace:3 largeop movablelimits symmetric # &CirclePlus;
 operator.\u2296.prefix = lspace:0 rspace:3 largeop movablelimits symmetric # &CircleMinus;
