--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -46,10 +46,10 @@ svg=
 tif=convert,$1.tif,gcache\$2.png
 tiff=convert,$1.tiff,gcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,$1.bmp,gcache\$2.png
-emf=wmf2epsc,graphics\$2.emf;epstopdf,$2,graphics\$2.eps,gcache\$2.png
-wmf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;epstopdf,$2;sam2p,graphics\$2.eps,gcache\$2.png
+emf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;epstopdf,$2;epstopng,$2
+wmf=wmf2epsc,graphics\$2.wmf,graphics\$2.eps;epstopdf,$2;epstopng,$2
 pdf=sam2p,$1.pdf,gcache\$2.png
-eps=epstopdf,$2;sam2p,$1.eps,gcache\$2.png
+eps=epstopdf,$2;epstopng,$1
 ps=sam2p,$1.ps,gcache\$2.png
 gif=convert,$1.gif,tcache\$2.png
 mp4=
