Changing name of epstopdf to msiepstopdf to avoid name conflict; trivial changes in some scripts to force changing the executable bit

--- a/prince/conversions/mac/graphicsConversions.ini
+++ b/prince/conversions/mac/graphicsConversions.ini
@@ -45,9 +45,9 @@ png=
 svg=
 tif=convert,$1.tif,gcache/$2.png
 tiff=convert,$1.tiff,gcache/$2.png
-pdf=epstopdf,graphics/$1.pdf,gcache/$2.png
-eps=epstopdf,graphics/$2.eps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
-ps=epstopdf,graphics/$2.ps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
+pdf=msiepstopdf,graphics/$1.pdf,gcache/$2.png
+eps=msiepstopdf,graphics/$2.eps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
+ps=msiepstopdf,graphics/$2.ps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
 gif=convert,$1.gif,tcache/$2.png
 mp4=
 avi=
