--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -47,11 +47,11 @@ tif=convert.exe,$1.tif,gcache\$2.png
 tiff=convert.exe,$1.tiff,gcache\$2.png
 gif=convert.exe,$1.gif,tcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,$1.bmp,gcache\$2.png
-emf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;epstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;epstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-pdf=epstopdf.cmd,graphics\$1.pdf,gcache\$2.png
-eps=epstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-ps=epstopdf.cmd,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+emf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+pdf=msiepstopdf.cmd,graphics\$1.pdf,gcache\$2.png
+eps=msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+ps=msiepstopdf.cmd,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 mp4=
 avi=
 mov=
