Fixed confusion between  and  in graphicsConversion.ini

--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -46,12 +46,12 @@ svg=
 tif=convert.exe,$1.tif,gcache\$2.png
 tiff=convert.exe,$1.tiff,gcache\$2.png
 gif=convert.exe,$1.gif,tcache\$2.png
-bmp=wscript.exe,invis.vbs,sam2p,$1.bmp,gcache\$2.png
-emf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-pdf=msiepstopdf.cmd,graphics\$1.pdf,gcache\$2.png
-eps=msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-ps=msiepstopdf.cmd,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+bmp=wscript.exe,invis.vbs,sam2p,graphics\$1.bmp,gcache\$1.png
+emf=wmf2epsc.exe,graphics\$1.wmf,graphics\$1.eps;msiepstopdf.cmd,graphics\$1.eps,tcache\$1.pdf;epstopng.cmd,graphics\$1.eps,gcache\$1.png
+wmf=wmf2epsc.exe,graphics\$1.wmf,graphics\$1.eps;msiepstopdf.cmd,graphics\$1.eps,tcache\$1.pdf;epstopng.cmd,graphics\$1.eps,gcache\$1.png
+pdf=msiepstopdf.cmd,graphics\$1.pdf,gcache\$1.png
+eps=msiepstopdf.cmd,graphics\$1.eps,tcache\$1.pdf;epstopng.cmd,graphics\$1.eps,gcache\$1.png
+ps=msiepstopdf.cmd,graphics\$1.ps,tcache\$1.pdf;epstopng.cmd,graphics\$1.eps,gcache\$1.png
 mp4=
 avi=
 mov=
