--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -49,7 +49,7 @@ gif=convert.exe,$1.gif,tcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,graphics\$2.bmp,gcache\$2.png
 emf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-pdf=msiepstopdf.cmd,graphics\$2.pdf,gcache\$2.png
+pdf=epstopng.cmd,graphics\$2.pdf,gcache\$2.png
 eps=msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 ps=msiepstopdf.cmd,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 mp4=
