--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -47,7 +47,7 @@ tif=convert.exe,$1.tif,gcache\$2.png
 tiff=convert.exe,$1.tiff,gcache\$2.png
 gif=convert.exe,$1.gif,tcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,graphics\$2.bmp,gcache\$2.png
-emf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+emf=wmf2epsc.exe,graphics\$2.emf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
 pdf=epstopng.cmd,graphics\$2.pdf,gcache\$2.png
 eps=msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
