Added 'export TEXMF-LOCAL'

--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -7,11 +7,11 @@
 ;
 ; The [Converters] section gives, for each extension, the command string that does the conversion.
 ; We count SVG and EPS as acceptable formats because with the right packages, they work with pdfTeX and
-; XeTeX.
+; XeTeX. Actually, we convert EPS to PDF, since it is more efficient to do it once rather than for each compilation.
 ;
 ; Users that want to experiment with adding support for new graphics formats can add additional lines to
 ; these sections. We assume that all conversion programs, including convert and sam2p, are in the
-; utilities/bin subdirectory (location varies slightly with the platform).
+; utilities subdirectory or one in the PATH environment variable set in MSITeX.bash.
 
 ; $1 stands for the base name of the original file (the full path without the extension).
 ; $2 stands for the leaf name (without the extension) of the original file.
