Reworking details of graphics conversion. The path to MSITeX.cmd/bash is passed as the 1st parameter to the batch files now, so we can soon stop setting an environment variable for its location. Also we don't do all the conversions when a document is loaded if it is not necessary. This also allows reading documents on the Mac that come from Windows and use WMFs or EMFs.

--- a/prince/conversions/mac/graphicsConversions.ini
+++ b/prince/conversions/mac/graphicsConversions.ini
@@ -17,10 +17,11 @@
 ; $2 stands for the leaf name (without the extension) of the original file.
 ; $3 stands for the desired width of the converted image.
 ; $4 stands for the desired height of the converted image.
+; $M stands for the full path of the MSITeX.bash or MSITeX.cmd file which is a sibling of the utilities directory.
 
 [Metadata]
-Version=1.0
-Date=2014-04-18
+Version=1.1
+Date=2016-02-15
 
 [LossyBitmaps]
 List=jpg jpeg
@@ -45,9 +46,9 @@ png=
 svg=
 tif=convert,$1.tif,gcache/$2.png
 tiff=convert,$1.tiff,gcache/$2.png
-pdf=epstopng,$1.pdf,gcache/$2.png
-eps=msiepstopdf,graphics/$2.eps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
-ps=msiepstopdf,graphics/$2.ps,tcache/$2.pdf;epstopng,graphics/$2.eps,gcache/$2.png
+pdf=epstopng,$M,$1.pdf,gcache/$2.png
+eps=msiepstopdf,$M,graphics/$2.eps,tcache/$2.pdf;epstopng,$M,graphics/$2.eps,gcache/$2.png
+ps=msiepstopdf,$M,graphics/$2.ps,tcache/$2.pdf;epstopng,$M,graphics/$2.eps,gcache/$2.png
 gif=convert,$1.gif,tcache/$2.png
 mp4=
 avi=
