--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -17,6 +17,7 @@
 ; $2 stands for the leaf name (without the extension) of the original file.
 ; $3 stands for the desired width of the converted image.
 ; $4 stands for the desired height of the converted image.
+; $M stands for the full path of the MSITeX.bash or MSITeX.cmd file which is a sibling of the utilities directory.
 
 [Metadata]
 Version=1.0
@@ -47,11 +48,11 @@ tif=convert.exe,$1.tif,gcache\$2.png
 tiff=convert.exe,$1.tiff,gcache\$2.png
 gif=convert.exe,$1.gif,tcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,graphics\$2.bmp,gcache\$2.png
-emf=wmf2epsc.exe,graphics\$2.emf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-pdf=epstopng.cmd,graphics\$2.pdf,gcache\$2.png
-eps=msiepstopdf.cmd,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
-ps=msiepstopdf.cmd,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,graphics\$2.eps,gcache\$2.png
+emf=wmf2epsc.exe,graphics\$2.emf,graphics\$2.eps;msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
+wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
+pdf=epstopng.cmd,$M,graphics\$2.pdf,gcache\$2.png
+eps=msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
+ps=msiepstopdf.cmd,$M,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
 mp4=
 avi=
 mov=
