Changes to use Inkscape on the Mac

--- a/prince/conversions/mac/graphicsConversions.ini
+++ b/prince/conversions/mac/graphicsConversions.ini
@@ -6,8 +6,6 @@
 ; a plugin must first be converted to a form that can be displayed.
 ;
 ; The [Converters] section gives, for each extension, the command string that does the conversion.
-; We count SVG as an acceptable format because with the right packages, it works with pdfTeX and
-; XeTeX.
 ;
 ; Users that want to experiment with adding support for new graphics formats can add additional lines to
 ; these sections. We assume that all conversion programs, including convert and sam2p, are in the
@@ -43,14 +41,16 @@ List=mp4 avi mov
 jpg=
 jpeg=
 png=
-svg=
 tif=convert,$1.tif,gcache/$2.png
 tiff=convert,$1.tiff,gcache/$2.png
 pdf=epstopng,$M,$1.pdf,gcache/$2.png
 eps=msiepstopdf,$M,graphics/$2.eps,tcache/$2.pdf;epstopng,$M,graphics/$2.eps,gcache/$2.png
 ps=msiepstopdf,$M,graphics/$2.ps,tcache/$2.pdf;epstopng,$M,graphics/$2.eps,gcache/$2.png
+emf=inkscapepdf,$M,graphics/$2.emf,tcache/$2.pdf;inkscapepng,$M,graphics/$2.emf,gcache/$2.png
+wmf=inkscapepdf,$M,graphics/$2.wmf,tcache/$2.pdf;inkscapepng,$M,graphics/$2.wmf,gcache/$2.png
+svg=inkscapepdf,$M,graphics/$2.svg,tcache/$2.pdf;inkscapepng,$M,graphics/$2.svg,gcache/$2.png
 gif=convert,$1.gif,tcache/$2.png
-mp4=
+mp4= 
 avi=
 mov=
 wmv=
