--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -43,13 +43,13 @@ List=mp4 avi mov wmv
 jpg=
 jpeg=
 png=
-svg=
 tif=convert.exe,$1.tif,gcache\$2.png
 tiff=convert.exe,$1.tiff,gcache\$2.png
 gif=convert.exe,$1.gif,tcache\$2.png
 bmp=wscript.exe,invis.vbs,sam2p,graphics\$2.bmp,gcache\$2.png
-emf=wmf2epsc.exe,graphics\$2.emf,graphics\$2.eps;msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
-wmf=wmf2epsc.exe,graphics\$2.wmf,graphics\$2.eps;msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
+emf=inkscapepdf.cmd,$M,graphics\$2.emf,tcache\$2.pdf;inkscapepng.cmd,$M,graphics\$2.emf,gcache\$2.png
+wmf=inkscapepdf.cmd,$M,graphics\$2.wmf,tcache\$2.pdf;inkscapepng.cmd,$M,graphics\$2.wmf,gcache\$2.png
+svg=inkscapepdf.cmd,$M,graphics\$2.svg,tcache\$2.pdf;inkscapepng.cmd,$M,graphics\$2.svg,gcache\$2.png
 pdf=epstopng.cmd,$M,graphics\$2.pdf,gcache\$2.png
 eps=msiepstopdf.cmd,$M,graphics\$2.eps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
 ps=msiepstopdf.cmd,$M,graphics\$2.ps,tcache\$2.pdf;epstopng.cmd,$M,graphics\$2.eps,gcache\$2.png
