--- a/prince/conversions/windows/graphicsConversions.ini
+++ b/prince/conversions/windows/graphicsConversions.ini
@@ -18,6 +18,7 @@
 ; $3 stands for the desired width of the converted image.
 ; $4 stands for the desired height of the converted image.
 ; $M stands for the full path of the MSITeX.bash or MSITeX.cmd file which is a sibling of the utilities directory.
+; $D stands for the full path of the _work directory (parent of graphics, gcache, and tcache).
 
 [Metadata]
 Version=1.0
@@ -40,6 +41,7 @@ List=mp4 avi mov wmv
 ; We use commas instead of spaces to separate parameters, because otherwise spaces in paths can cause a problem.
 
 [Converters]
+
 jpg=
 jpeg=
 png=
