Changes to TeX source view which implement syntax highlighting.

--- a/prince/res/Makefile.in
+++ b/prince/res/Makefile.in
@@ -17,9 +17,10 @@ CONSTANTS1_RESOURCES := $(wildcard $(srcdir)/fragments/Constants1/*.frg)
 CONSTANTS2_RESOURCES := $(wildcard $(srcdir)/fragments/Constants2/*.frg)
 CONSTANTS3_RESOURCES := $(wildcard $(srcdir)/fragments/Constants3/*.frg)
 CM2_RESOURCES := $(wildcard $(srcdir)/cm2/*)
+ACE_RESOURCES := $(wildcard $(srcdir)/ace/*)
 
 
-libs::	$(CSS_RESOURCES) $(XBL_RESOURCES) $(CM2_RESOURCES)
+libs::	$(CSS_RESOURCES) $(XBL_RESOURCES) $(CM2_RESOURCES) $(ACE_RESOURCES)
 	$(INSTALL)	$(CSS_RESOURCES)	$(FINAL_TARGET)/res/css
 	$(INSTALL)	$(TAGDEF_RESOURCES)	$(FINAL_TARGET)/res/tagdefs
 	$(INSTALL)	$(XML_RESOURCES)	$(FINAL_TARGET)/res/xml
@@ -36,6 +37,7 @@ ifdef MOZ_MSI_TEX
 	- cp $(srcdir)/fragments/dingbats/*.frg $(FINAL_TARGET)/res/fragments/dingbats
 endif
 	$(INSTALL)  $(CM2_RESOURCES) 	$(FINAL_TARGET)/res/cm2
+	$(INSTALL)  $(ACE_RESOURCES) 	$(FINAL_TARGET)/res/ace
 	$(INSTALL)	$(ICON_RESOURCES)	$(FINAL_TARGET)/res/css
 				  
 
